2004-02-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
          add calls to AM_CONDITIONAL for subsystems for automake 1.6.x

2004-02-13  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: pass required libxml version as argument
          (bug reported by Christophe Fergeau)

2004-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>
  
	* docs/gst/gstreamer-docs.sgml:
	* docs/gst/tmpl/gstxml.sgml:
	* docs/libs/gstreamer-libs-docs.sgml:
          version API docs

2004-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstinfo.c:
	* gst/gstregistrypool.c: (gst_registry_pool_plugin_filter),
	(gst_registry_pool_feature_filter):
	* gst/gstthread.c: (gst_thread_class_init):
	* gst/gstvalue.c:
          add includes exposed by building without libxml
	* gst/indexers/Makefile.am:
          do not build fileindex when LOADSAVE disabled; we should have
          a better libxml check later since fileindex depends on xml, not
          LOADSAVE or REGISTRY
	* libs/gst/control/Makefile.am:
          link with m
	* tools/Makefile.am:
          fix wrong source code for gst-xmlinspect

2004-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
          fix gcov help output
          move calls to and use new GST_CHECK_DISABLE_SUBSYSTEM
	* docs/random/release:
          some updated releasing notes
	* gstreamer.spec.in:
          more updates

2004-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/faq/faq.xml:
	* docs/manual/manual.xml:
	* docs/pwg/pwg.xml:
	* docs/pwg/titlepage.xml:
          put version in documentation

2004-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* tools/Makefile.am: fix man page installation

2004-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  don't check for libxml when load/save and registry disabled (#105844)
	* gstreamer.spec.in:
          sync with fedora candidate spec
